@@ -1,9 +1,18 @@
-# 1.1.5 -
+# 1.1.5 - March 5, 2025
+- 🌟 `ADD` Added default settings to server.properties to mitigate potential malicious activity.
+- 🛠️ `ADJ` Improved default gameplay experience through adjusted server.properties.
+- 🌟 `ADD` Added a Changelog section to the Readme.
+- 🌟 `ADD` Added a paragraph about security settings to the "Server Configuration" subsection of "Default Server Configuration and Game Rules".
+- 🌟 `ADD` Added `--enable-native-access=ALL-UNNAMED` to suggested Server Startup Flags.
+- 🌟 `ADD` Added a "Supporting Open-Source Projects" section to the Readme.
+- 🌟 `ADD` Added [TrashSlot](https://modrinth.com/mod/trashslot) mod, providing a cleaner way to discard items instead of dropping them.
+- 🌟 `ADD` Added [Carpet](https://modrinth.com/mod/carpet), [Carpet Extra](https://modrinth.com/mod/carpet-extra) and [Carpet TIS Addition](https://modrinth.com/mod/carpet-tis-addition) mod and applied performance-enhancing settings.
 
-
-# 1.1.4 - March 03, 2025
+# 1.1.4 - March 3, 2025
 - 🛠️ `ADJ` Increased item merge range from 2 to 3 blocks. (Get It Together, Drops!)
 - 🛠️ `ADJ` Updated project dependencies.
+
+-----
 
 # (TEMPLATE) 1.2.3 - January 1, 1970
 ## Mage
